--- a/Recipes/Recipes.css
+++ b/Recipes/Recipes.css
@@ -1,11 +1,29 @@
-* {
-    background-color: rgb(247, 135, 181);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    
-}
-.headings{
-    color: aqua;
-    font-weight: bold;
+#full{
     background-color: white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: rgb(3, 38, 70);
+}
+
+.titles{
+    background-color: pink;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 0px;
+    
+    margin-right: 0px;
+    padding: 0.5px;
+    border: 1px;
     text-align: center;
+}
+
+.contents{
+    background-color: pink;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 0px;
+    margin-right: 0px;
+    padding: 1px;
+    border: 1px;
+    text-align: left;
+
 }
